@@ -1,6 +1,7 @@
 0.04
  [Common]
  - Add PYX::Sort to SEE ALSO section in doc.
+ - Update Module::Install to 1.16 version.
 
 0.03 2015-02-06T16:08:16+01:00
  [PYX]
